# KaidokuPDF

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  convert_to_searchable_pdf.py  extract_text_from_pdf.py  ocr_desktop_app.py  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml  release.yml
.streamlit/: config.toml
docs/: development.md  setup.md
image_pdf_ocr/: __init__.py  _cli_convert.py  _cli_extract.py  _engine.py  _environment.py  _exceptions.py  _parallel.py  _pdf.py  _utils.py  _version.py  ocr.py
tasks/: phase4-plan.md  review-phase3.md  todo.md
tests/: conftest.py  test_cli.py  test_e2e.py  test_engine_env.py  test_environment.py  test_exceptions.py  test_integration.py  test_ocr_module.py  test_ocr_pipeline.py  test_ocr_utils.py  test_parallel.py  test_pdf_core.py  test_pdf_utils.py  test_prepare_output.py  test_remove_pdf_password.py
