[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kaidoku-pdf"
version = "0.1.0"
description = "画像ベースのPDFをOCRし、検索可能なPDF生成やテキスト抽出を行うツールセット"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "pytesseract",
    "Pillow",
    "PyMuPDF",
    "pandas",
]

[project.scripts]
kaidoku-convert = "convert_to_searchable_pdf:main"
kaidoku-extract = "extract_text_from_pdf:main"

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pre-commit",
]

[tool.hatch.build.targets.wheel]
packages = ["image_pdf_ocr"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "UP", "B", "I", "SIM", "RUF"]
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
